# genericsuite-codegen

./: .env.example  .gitignore  BuildPrompt.md  CHANGELOG.md  Kiro-SDLC-Screenshots.md  Kiro-Usage.md  Makefile  README.md  package-lock.json  package.json
.kiro/hooks/: source-docs-sync.kiro.hook
.kiro/specs/chat-conversation-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/deploy-dependency-sync/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-vector-search/: requirements.md
.kiro/specs/genericsuite-codegen/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
deploy/: Makefile  docker-compose.yml  docker-compose.yml.example  nginx.conf.example  run-deploy.sh  server-entrypoint.sh
deploy/dependency-sync/: cli_interface.py  data_types.py  dependency_merger.py  dockerfile_updater.py  exceptions.py  pytest.ini  run_tests.py  sync_dependencies.py  sync_dependencies.sh  toml_parser.py  version_translator.py
deploy/dependency-sync/tests/: test_integration.py  test_toml_parser.py  test_utils.py
deploy/docker_images/: Dockerfile  Dockerfile-Ollama  Dockerfile-Python  build_docker_images.sh
local_mongodb_data/: .gitignore  README.md
local_mongodb_data/config/: .gitignore
mcp-server/: .env.example  MCP_USAGE.md  Makefile  README.md  __init__.py  claude_desktop_http_config.json  kiro_stdio_config.json  package.json  pyproject.toml  run_mcp_server.sh  simple_test.py  start_mcp_server.py  test_mcp_server.py  vscode_mcp_http_config.json
server/: Makefile  README.md  package.json  pyproject.toml  run-server.sh
server/genericsuite_codegen/: __init__.py
server/genericsuite_codegen/agent/: __init__.py  agent.py  prompts.py  tools.py  types.py
server/genericsuite_codegen/api/: __init__.py  endpoint_methods.py  main.py  types.py  utilities.py
server/genericsuite_codegen/database/: __init__.py  integration_test.py  setup.py  test_setup.py
server/genericsuite_codegen/debug/: debug_search.py  debug_vector_search.py
server/genericsuite_codegen/document_processing/: __init__.py  chunker.py  embeddings.py  enums.py  ingestion.py  processors.py  test_pipeline.py  types.py
server/genericsuite_codegen/mcp_server/: README.md  __init__.py  server.py
server/utilities/: utilities.py
ui/: .eslintignore  .eslintrc.cjs  Makefile  SHADCN_SETUP.md  index.html  package.json  run-client.sh  vite.config.ts
ui/src/: App.tsx
ui/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
ui/src/components/ui/: button.tsx
ui/src/lib/: api.ts
ui/src/pages/: ChatPage.tsx  CodeGenerationPage.tsx  HomePage.tsx  KnowledgeBasePage.tsx
